--- a/Wealtherty.Cli.Core/Wealtherty.Cli.Core.csproj
+++ b/Wealtherty.Cli.Core/Wealtherty.Cli.Core.csproj
@@ -1,15 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Wealtherty.Cli.CompaniesHouse\Wealtherty.Cli.CompaniesHouse.csproj" />
-      <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
+      <PackageReference Include="CommandLineParser" Version="2.9.1" />
     </ItemGroup>
 
 </Project>
