--- a/Wealtherty.Cli.Core/Wealtherty.Cli.Core.csproj
+++ b/Wealtherty.Cli.Core/Wealtherty.Cli.Core.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     </ItemGroup>
 
 </Project>
