--- a/Wealtherty.Cli/Wealtherty.Cli.csproj
+++ b/Wealtherty.Cli/Wealtherty.Cli.csproj
@@ -12,4 +12,10 @@
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
