--- a/Wealtherty.Cli.CompaniesHouse/Wealtherty.Cli.CompaniesHouse.csproj
+++ b/Wealtherty.Cli.CompaniesHouse/Wealtherty.Cli.CompaniesHouse.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+    </ItemGroup>
+
 </Project>
