Added basic compan-get command

--- a/Wealtherty.Cli.CompaniesHouse/Wealtherty.Cli.CompaniesHouse.csproj
+++ b/Wealtherty.Cli.CompaniesHouse/Wealtherty.Cli.CompaniesHouse.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="CompaniesHouse" Version="7.12.16" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
     </ItemGroup>
 
