--- a/Wealtherty.Cli/appsettings.json
+++ b/Wealtherty.Cli/appsettings.json
@@ -1,5 +1,10 @@
 ﻿{
   "CompaniesHouse":{
     "ApiKey": ""
+  },
+  "Neo4j": {
+    "Uri": "neo4j+s://ac347ae6.databases.neo4j.io",
+    "Username": "",
+    "Password": ""
   }
 }
