--- a/Wealtherty.Cli/Wealtherty.Cli.csproj
+++ b/Wealtherty.Cli/Wealtherty.Cli.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
       <UserSecretsId>2978d451-8469-402d-a5b9-003f37099f01</UserSecretsId>
   </PropertyGroup>
 
