Started searching UKRI

--- a/Wealtherty.Cli/Wealtherty.Cli.csproj
+++ b/Wealtherty.Cli/Wealtherty.Cli.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Wealtherty.Cli.CompaniesHouse\Wealtherty.Cli.CompaniesHouse.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
+      <ProjectReference Include="..\Wealtherty.Cli.Ukri\Wealtherty.Cli.Ukri.csproj" />
     </ItemGroup>
 
     <ItemGroup>
