--- a/Wealtherty.Cli/Wealtherty.Cli.csproj
+++ b/Wealtherty.Cli/Wealtherty.Cli.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Wealtherty.Cli.CharityCommission\Wealtherty.Cli.CharityCommission.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.CompaniesHouse\Wealtherty.Cli.CompaniesHouse.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.Ukri\Wealtherty.Cli.Ukri.csproj" />
