--- a/Wealtherty.Cli/appsettings.json
+++ b/Wealtherty.Cli/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+  "CharityCommission": {
+    "SubscriptionKey": "",
+    "Uri": "https://api.charitycommission.gov.uk/"
+  },
   "CompaniesHouse":{
     "ApiKey": ""
   },
