--- a/Wealtherty.Cli.CharityCommission/Wealtherty.Cli.CharityCommission.csproj
+++ b/Wealtherty.Cli.CharityCommission/Wealtherty.Cli.CharityCommission.csproj
@@ -3,11 +3,15 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Model" />
     </ItemGroup>
 
 </Project>
