--- a/Wealtherty.Cli.CharityCommission/Wealtherty.Cli.CharityCommission.csproj
+++ b/Wealtherty.Cli.CharityCommission/Wealtherty.Cli.CharityCommission.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Wealtherty.Cli.CompaniesHouse\Wealtherty.Cli.CompaniesHouse.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
     </ItemGroup>
 
