--- a/Wealtherty.Cli/Wealtherty.Cli.csproj
+++ b/Wealtherty.Cli/Wealtherty.Cli.csproj
@@ -14,6 +14,7 @@
       <ProjectReference Include="..\Wealtherty.Cli.CompaniesHouse\Wealtherty.Cli.CompaniesHouse.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.Ukri\Wealtherty.Cli.Ukri.csproj" />
+      <ProjectReference Include="..\Wealtherty.ThinkTanks\Wealtherty.ThinkTanks.csproj" />
     </ItemGroup>
 
     <ItemGroup>
