--- a/Wealtherty.Cli.CompaniesHouse/Wealtherty.Cli.CompaniesHouse.csproj
+++ b/Wealtherty.Cli.CompaniesHouse/Wealtherty.Cli.CompaniesHouse.csproj
@@ -20,4 +20,8 @@
       <EmbeddedResource Include="Resources\SicCodes.csv" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Graph" />
+    </ItemGroup>
+
 </Project>
