Spike creates nodes

--- a/Wealtherty.Cli.Bridge/Wealtherty.Cli.Bridge.csproj
+++ b/Wealtherty.Cli.Bridge/Wealtherty.Cli.Bridge.csproj
@@ -10,6 +10,7 @@
       <ProjectReference Include="..\Wealtherty.Cli.CharityCommission\Wealtherty.Cli.CharityCommission.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.CompaniesHouse\Wealtherty.Cli.CompaniesHouse.csproj" />
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
+      <ProjectReference Include="..\Wealtherty.ThinkTanks\Wealtherty.ThinkTanks.csproj" />
     </ItemGroup>
 
 </Project>
