--- a/Wealtherty.Cli.Core/Wealtherty.Cli.Core.csproj
+++ b/Wealtherty.Cli.Core/Wealtherty.Cli.Core.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
       <PackageReference Include="CommandLineParser" Version="2.9.1" />
       <PackageReference Include="CsvHelper" Version="30.0.1" />
+      <PackageReference Include="HtmlAgilityPack" Version="1.11.53" />
       <PackageReference Include="Humanizer" Version="2.14.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
