--- a/Wealtherty.Cli.Core/Wealtherty.Cli.Core.csproj
+++ b/Wealtherty.Cli.Core/Wealtherty.Cli.Core.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Polly" Version="7.2.4" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+      <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
