--- a/Wealtherty.ThinkTanks/Wealtherty.ThinkTanks.csproj
+++ b/Wealtherty.ThinkTanks/Wealtherty.ThinkTanks.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Wealtherty.Cli.Core\Wealtherty.Cli.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <EmbeddedResource Include="Resources\ThinkTanks.csv" />
+      <EmbeddedResource Include="Resources\ThinkTanksCompanies.csv" />
+    </ItemGroup>
+
 </Project>
