Refactoring: Appointments is now embedded in ThinkTanks

--- a/Wealtherty.ThinkTanks/Wealtherty.ThinkTanks.csproj
+++ b/Wealtherty.ThinkTanks/Wealtherty.ThinkTanks.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <EmbeddedResource Include="Resources\ThinkTanks.csv" />
       <EmbeddedResource Include="Resources\ThinkTanksCompanies.csv" />
+      <EmbeddedResource Include="Resources\Appointments.csv" />
     </ItemGroup>
 
 </Project>
