--- a/Wealtherty.ThinkTanks/Wealtherty.ThinkTanks.csproj
+++ b/Wealtherty.ThinkTanks/Wealtherty.ThinkTanks.csproj
@@ -12,7 +12,7 @@
 
     <ItemGroup>
       <EmbeddedResource Include="Resources\ThinkTanks.csv" />
-      <EmbeddedResource Include="Resources\ThinkTanksCompanies.csv" />
+      <EmbeddedResource Include="Resources\Companies.csv" />
       <EmbeddedResource Include="Resources\Appointments.csv" />
     </ItemGroup>
 
